<resources>
    <string name="app_name">Ecommerce</string>
    <string name="main_title">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lastest_products">Lastest products</string>
    <string name="sing_in">Sing in</string>
    <string name="search">Search...</string>
    <string name="sing_up">Sing up</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="shipping">SHIPPING</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_city">Enter city</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="country">Country</string>
    <string name="enter_country">Enter country</string>
    <string name="payment">PAYMENT</string>
    <string name="payment_method">Payment method</string>
    <string name="order">ORDER</string>
    <string name="order_item">ORDER ITEMS</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="_0">$0</string>
    <string name="place_order">Place order</string>
    <string name="profile">Profile</string>
    <string name="place_order_home">Home</string>
</resources>