<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presention.ui.page.ShippingCartFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shipping"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:padding="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_shipping_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_corners_15"
                android:textSize="16sp"
                android:hint="@string/enter_address"
                android:maxLines="1"
                android:padding="8dp" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_shipping_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_corners_15"
                android:textSize="16sp"
                android:hint="@string/enter_city"
                android:maxLines="1"
                android:padding="8dp" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_code"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/edt_shipping_postalcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_corners_15"
                android:hint="@string/enter_postal_code"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="16sp" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_shipping_country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_corners_15"
                android:textSize="16sp"
                android:hint="@string/enter_country"
                android:maxLines="1"
                android:padding="8dp" />
        </LinearLayout>

        <Button
            android:layout_marginBottom="12dp"
            android:id="@+id/bt_shipping_continue"
            android:layout_gravity="bottom|center"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bt_border_10"
            android:text="Continue" />
    </FrameLayout>
</layout>