<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="36dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_main"
            android:layout_width="160dp"
            android:layout_height="160dp"/>
        <LinearLayout
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:background="@drawable/corners_login_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:text="@string/sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_singup_name"
                android:maxLines="1"
                android:padding="8dp"
                android:hint="@string/enter_name"
                android:background="@drawable/tv_corners_15"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_singup_email"
                android:maxLines="1"
                android:padding="8dp"
                android:hint="@string/enter_email"
                android:background="@drawable/tv_corners_15"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_singup_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:hint="@string/enter_password"
                android:background="@drawable/tv_corners_15"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_singup_confirm_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:background="@drawable/tv_corners_15"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/bt_singup"
                android:text="@string/sing_up"
                android:background="@drawable/bt_corners_15"
                app:backgroundTint="@color/button_login"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <LinearLayout
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/white"
                    android:text="@string/have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/bt_singup_back"
                    android:textColor="@color/button_login"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pb_singUp"
            android:indeterminateTint="@color/button_login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </FrameLayout>
</layout>