<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presention.ui.page.OrderFragment">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/bt_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shipping"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_order_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shipping"
                android:textSize="16sp" />
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/payment_method"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_order_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shipping"
                android:textSize="16sp" />
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_item"
                android:textSize="18sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_order_item"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_summary"
                android:textSize="18sp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Items"
                    android:textSize="16sp" />
                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/tv_order_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_0"
                    android:textSize="16sp" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Shipping"
                    android:textSize="16sp" />
                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/tv_order_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_0"
                    android:textSize="16sp" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Tax"
                    android:textSize="16sp" />
                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/tv_order_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_0"
                    android:textSize="16sp" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Total"
                    android:textSize="16sp" />
                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/tv_order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/_0"
                    android:textSize="16sp" />
            </FrameLayout>
            <TextView
                android:visibility="gone"
                android:layout_gravity="bottom|center_horizontal"
                android:id="@+id/tv_order_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_text"
                android:padding="12dp" />

        </LinearLayout>
        <Button
            android:layout_marginBottom="12dp"
            android:id="@+id/bt_order_continue"
            android:layout_gravity="bottom|center"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bt_border_10"
            android:text="@string/place_order" />
        <Button
            android:visibility="gone"
            android:layout_marginBottom="12dp"
            android:id="@+id/bt_order_home"
            android:layout_gravity="bottom|center"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@drawable/bt_border_10"
            android:text="@string/place_order_home" />


        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pb_order"
            android:indeterminateTint="@color/button_login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </FrameLayout>
</layout>